Fix openMF#3237 Client to accounting transfer feature for amount transfer client for passing Journal Entry

--- a/app/views/accounting/accounting.html
+++ b/app/views/accounting/accounting.html
@@ -34,6 +34,12 @@
 
                             <p class="list-group-item-text">{{ 'label.define.openingbalances' | translate}}</p>
                         </a>
+                        <a class="list-group-item" href="#/clienttoaccountingheadertransfer" has-permission='CREATE_JOURNALENTRY'>
+                            <h4 class="list-group-item-heading"><i class="fa fa-random fa fa-large"></i>&nbsp;&nbsp;{{
+                                'label.heading.membertoaccountheader.transferentry' | translate}}</h4>
+
+                            <p class="list-group-item-text">{{ 'label.listof.membertoaccountheader.transferentry' | translate}}</p>
+                        </a>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-6">        
